first db connection

--- a/website/index.html
+++ b/website/index.html
@@ -18,7 +18,7 @@
         <div class="col-md-7"><h1><b>SwissNotes</b></h1></div>
         <div class="col-md-3 padding20">
           <a href="login.php"><button id="login">Log in</button></a>
-          <a href="register.php"><button id="register">Register</button></a>
+          <a href="register.html"><button id="register">Register</button></a>
         </div>
         <div class="col-md-1"></div>
       </div>
