--- a/website/register.html
+++ b/website/register.html
@@ -9,7 +9,7 @@
   <div id="register_container">
   <img id="icon" src="static/images/register.png" />
     <h2>Register</h2>
-    <form id="register_form">
+    <form id="register_form" action="handle_register.php" method="post">
       <label for="username">Userame </label><br>
       <input id="username" class="form_elements" type="text" name="name" required/><br>
       <label for="password">Password </label><br>
