--- a/website/account.html
+++ b/website/account.html
@@ -13,7 +13,7 @@
 <header>
     <div class="row">
         <div class="col-md-2"></div>
-        <div class="col-md-7"><h1>SwissNotes - Hello, User1</h1></div>
+        <div class="col-md-7"><h1 style="padding:0px">SwissNotes - Hello, User1</h1></div>
         <div class="col-md-1 padding20">
             <a href="login.php"><button id="login">Log out</button></a>
         </div>
@@ -28,9 +28,9 @@
         </ul>
     </div>
     <div id="note_container" class="col-md-6">
-        <textbody class="textarea">
+        <textarea>
 skdjflksdjflökj
-        </textbody>
+        </textarea>
     </div>
     <div class="col-md-2"></div>
 </div>
