made mvc structure

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
   <title>SwissNotes</title>
-  <link rel="icon" type="image/png" href="static/images/favicon.png">
+  <link rel="icon" type="image/png" href="view/static/images/favicon.png">
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 
   <!-- custom -->
-  <link rel="stylesheet" type="text/css" href="static/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="static/styles.css">
+  <link rel="stylesheet" type="text/css" href="view/static/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="view/static/styles.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
   </head>
@@ -17,8 +17,8 @@
         <div class="col-md-1"></div>
         <div class="col-md-7"><h1><b>SwissNotes</b></h1></div>
         <div class="col-md-3 padding20">
-          <a href="login.php"><button id="login">Log in</button></a>
-          <a href="register.html"><button id="register">Register</button></a>
+          <a href="controller/login.php"><button id="login">Log in</button></a>
+          <a href="view/register.html"><button id="register">Register</button></a>
         </div>
         <div class="col-md-1"></div>
       </div>
@@ -28,7 +28,7 @@
       <div class="col-md-8">
         <div class="row">
           <div class="col-md-2 nopadding">
-            <img class="icon_h2" src="static/images/about.png" />
+            <img class="icon_h2" src="view/static/images/about.png" />
           </div>
           <div class="col-md-8">
             <h2 class="txt_center">About</h2>
