made mvc structure

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="col-md-1"></div>
         <div class="col-md-7"><h1><b>SwissNotes</b></h1></div>
         <div class="col-md-3 padding20">
-          <a href="controller/login.php"><button id="login">Log in</button></a>
+          <a href="view/login.html"><button id="login">Log in</button></a>
           <a href="view/register.html"><button id="register">Register</button></a>
         </div>
         <div class="col-md-1"></div>
